✨ Feat : 스레드 종료 예외 처리 강화 및 안정성 확보